--- a/index.html
+++ b/index.html
@@ -7,31 +7,30 @@
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <body>
-
-    <div class="main-nav">
+  
+    <nav class="main-nav">
         <ul class="nav">
           <li class="name">Steve Fernandes</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="experience.html">Experience</a></li>
           <li><a href="contact.html">Contact Me</a></li>
         </ul>
-    </div>
+    </nav>
 
     <header>
-      <img src="images/profile (2).jpg" alt="my world" class="profile-image">
+      <img src="images/profile_2.jpg" alt="my world" class="profile-image">
       <h1 class="tag name">Welcome to my page</h1>
       <p class="tag role">Steve Fernandes</p>
     </header>
 
     <main class="flex">
-      <div class="card">
+      <section class="card">
         <h2>About me </h2>
-        <p>A multilingual business school graduate recognized by the IDF for strong leadership ability and commitment to a career in the Technology sector. My experience as an
-          Investment Specialist at Aviva Investors exposed me to key functions within investments and sales, providing me with a more rounded view of the industry than many at this stage of development. Particular strengths are; analytics, working under pressure to tight deadlines, communications, and complex problem-solving. Furthermore, I take pride in my naturally diplomatic style and sharp focus in completing tasks to an exceptional standard.
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit ducimus in quos inventore rerum tenetur pariatur totam autem tempora soluta repellendus alias cum debitis labore, quo sint, et obcaecati assumenda.
           </p>
-      </div> 
+      </section> 
 
-      <div class="card">
+      <section class="card">
         <h2>Goals</h2>
         <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
         <ul class="skills">
@@ -42,7 +41,7 @@
           <li>Rails</li>
         </ul>
         <p>I’d like to work for a EdTech company, helping people from disadvantaged background have access to high quality affordabble education. </p>
-      </div> 
+      </section> 
 
     </main>
     <footer>
