--- a/contact.html
+++ b/contact.html
@@ -8,17 +8,17 @@
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <body>
 
-    <div class="main-nav">
+    <nav class="main-nav">
         <ul class="nav">
           <li class="name">Steve Fernandes</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="experience.html">Experience</a></li>
-          <li><a href="experience.html">Contact Me</a></li>
+          <li><a href="contact.html">Contact Me</a></li>
         </ul>
-    </div>
+    </nav>
 
     <header>
-      <img src="images/profile (2).jpg" alt="my world" class="profile-image">
+      <img src="images/profile_2.jpg" alt="my world" class="profile-image">
       <h1 class="tag name">Contact Me</h1>
       <p class="tag role">Steve Fernandes</p>
     </header>
