--- a/experience.html
+++ b/experience.html
@@ -8,23 +8,23 @@
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <body>
 
-    <div class="main-nav">
+    <nav class="main-nav">
         <ul class="nav">
           <li class="name">Steve Fernandes</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="experience.html">Experience</a></li>
           <li><a href="contact.html">Contact Me</a></li>
         </ul>
-    </div>
+    </nav>
 
     <header>
-      <img src="images/profile (2).jpg" alt="my world" class="profile-image">
+      <img src="images/profile_2.jpg" alt="my world" class="profile-image">
       <h1 class="tag name">Experience</h1>
       <p class="tag role">Steve Fernandes</p>
     </header>
 
     <main class="flex">
-      <div class="card">
+      <section class="card">
         <h2>Current Role </h2>
         <h4>Multi asset Investment Specialist</h4>
         <h6>Aviva Investors</h6>
@@ -37,17 +37,18 @@
           <li>Established key procedures for teams preparing documentation, models, and
             presentations Researched industry competitors and compiled detailed analysis data </li>
         </ul>
-      </div> 
+      </section> 
 
-      <div class="card">
+      <section class="card">
         <h2>Interests</h2>
         <ul>
-          <li>Peronal Development</li>
+          <li> <i class="fas fa-hammer"></i>Peronal Development</li>
           <li>Financial Markets</li>
           <li>Reading </li>
           <li>Health & Fitness</li>
+          <img src="images/brain.png" alt="picture of brain">
         </ul>
-      </div> 
+      </section> 
       
     </main>
     <footer>
